# MathBench

./: CMakeLists.txt  main.cpp
.github/workflows/: ci.yml
